OAKHILL/src/objects/Contact_to_Contact_Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>From_Affiliation__c</fullName>
        <label>From Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Administrator/Custodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax/Accountant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Contact__c</fullName>
        <label>From Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Affiliation</relationshipLabel>
        <relationshipName>Contact_to_Contact_Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Affiliation</label>
        <referenceTo>Contact_to_Contact_Affiliation__c</referenceTo>
        <relationshipName>Contact_to_Contact_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLX_Association_ID__c</fullName>
        <externalId>true</externalId>
        <label>SLX Association ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLX_Back_Relation__c</fullName>
        <label>SLX Back Relation</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX_Forward_Relation__c</fullName>
        <label>SLX Forward Relation</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Affiliation__c</fullName>
        <label>To Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Administrator/Custodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax/Accountant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Affiliations</relationshipLabel>
        <relationshipName>Contact_to_Contact_Affiliations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; + Id, &quot;View&quot;, &quot;_parent&quot;)</formula>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Contact Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C2C-{000000}</displayFormat>
        <label>Contact to Contact Affiliation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ToAndFromContactsAreDifferent</fullName>
        <active>true</active>
        <description>To and From fields are different.</description>
        <errorConditionFormula>From_Contact__c ==  To_Contact__c</errorConditionFormula>
        <errorMessage>You cannot affiliate a Contact with itself.</errorMessage>
    </validationRules>
</CustomObject>